# Blackhart

./: .gitignore  CMakeLists.txt  compile.sh
blackhart/: CMakeLists.txt
blackhart.data/: .gitignore  CMakeLists.txt
blackhart.data/sources/: main.c
blackhart.studio/: CMakeLists.txt
blackhart.studio.qt/: CMakeLists.txt
blackhart.studio.qt/includes/: BkEditor.hpp  BkViewer.hpp
blackhart.studio.qt/sources/: BkEditor.cpp  BkViewer.cpp  main.cpp
blackhart.studio/includes/foundation/: BkTime.hpp
blackhart.studio/sources/: main.cpp
blackhart.studio/sources/foundation/: BkTime.cpp
blackhart.studio/tests/: CMakeLists.txt
blackhart/includes/: blackhart.h
blackhart/includes/foundation/: BkAngleAxis.h  BkArray.h  BkAtomicDataType.h  BkCamera.h  BkError.h  BkEulerAngles.h  BkFileSystem.h  BkFoundation.h  BkList.h  BkLogger.h  BkMath.h  BkMatrix4x4.h  BkOrbitalCamera.h  BkPoint3.h  BkProjection.h  BkQuaternion.h  BkQueue.h  BkString.h  BkTransform.h  BkVector3.h
blackhart/includes/renderer/: BkBuffer.h  BkOpenGL.h  BkOpenGLBuffer.h  BkOpenGLShader.h  BkRenderer.h  BkShader.h  BkTexture.h
blackhart/shaders/: pixel.glsl  vertex.glsl
blackhart/sources/: blackhart.c
blackhart/sources/foundation/: BkAngleAxis.c  BkArray.c  BkCamera.c  BkError.c  BkEulerAngles.c  BkFileSystem.c  BkList.c  BkLogger.c  BkMath.c  BkMatrix4x4.c  BkMeshSampling.c  BkOrbitalCamera.c  BkPoint3.c  BkProjection.c  BkQuaternion.c  BkQueue.c  BkString.c  BkTransform.c  BkVector3.c
blackhart/sources/renderer/: BkBuffer.c  BkOpenGL.c  BkOpenGLBuffer.c  BkOpenGLShader.c  BkRenderer.c  BkShader.c  BkTexture.c
blackhart/tests/: CMakeLists.txt
blackhart/tests/includes/foundation/: BkAngleAxis_test.h  BkArray_test.h  BkList_test.h  BkMath_test.h  BkPoint3_test.h  BkQuaternion_test.h  BkQueue_test.h  BkString_test.h
blackhart/tests/sources/foundation/: BkAngleAxis_test.c  BkList_test.c  BkMath_test.c  BkPoint3_test.c  BkString_test.c
cmake/config/platform/: win-vs.txt
doc/doxygen/: Doxyfile
doc/doxygen/html/: _bk_angle_axis_8h.html  _bk_angle_axis_8h.js  _bk_angle_axis_8h_source.html  _bk_array_8h.html  _bk_array_8h.js  _bk_array_8h_source.html  _bk_atomic_data_type_8h.html  _bk_atomic_data_type_8h.js  _bk_atomic_data_type_8h_source.html  _bk_error_8h.html  _bk_error_8h.js  _bk_error_8h_source.html  _bk_euler_angles_8h.html  _bk_euler_angles_8h.js  _bk_euler_angles_8h_source.html  _bk_export_8h.html  _bk_export_8h.js  _bk_export_8h_source.html  _bk_file_system_8h.html  _bk_file_system_8h.js  _bk_file_system_8h_source.html  _bk_foundation_8h.html  _bk_foundation_8h_source.html  _bk_list_8h.html  _bk_list_8h.js  _bk_list_8h_source.html  _bk_logger_8h.html  _bk_logger_8h.js  _bk_logger_8h_source.html  _bk_math_8h.html  _bk_math_8h.js  _bk_math_8h_source.html  _bk_matrix4x4_8h.html  _bk_matrix4x4_8h.js  _bk_matrix4x4_8h_source.html  _bk_mesh_sampling_8h.html  _bk_mesh_sampling_8h.js  _bk_mesh_sampling_8h_source.html  _bk_point3_8h.html  _bk_point3_8h.js  (+58 more)
doc/doxygen/html/search/: all_1.js  all_10.js  all_2.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_e.js  (+16 more)
doc/uml/: blackhart.mdj
export/cpp/: Blackhart.hpp
includes/: blackhart.h
includes/core/: BkArray.h  BkBuffer.h  BkCamera.h  BkCore.h  BkEntity.h  BkError.h  BkGeometry.h  BkList.h  BkLogger.h  BkMaterial.h  BkMath.h  BkMatrix4x4.h  BkPoint.h  BkRenderer.h  BkScene.h  BkShader.h  BkString.h  BkVector.h  BkVector4.h  __BkLogger.h  core.h
includes/core/debug/: BkLogger.h  logger.h
includes/core/graphics/: BkShader.h
includes/core/math/: BkVector4.h  math.h  matrix4x4.h  vector4.h
includes/foundation/: BkAngleAxis.h  BkArray.h  BkAtomicDataType.h  BkCamera.h  BkError.h  BkEulerAngles.h  BkFileSystem.h  BkFoundation.h  BkGraphicsAPI.h  BkList.h  BkLogger.h  BkMath.h  BkMatrix4x4.h  BkMeshSampling.h  BkPoint3.h  BkProjection.h  BkQuaternion.h  BkQueue.h  BkRenderer.h  BkString.h  BkTransform.h  BkVector3.h  __BkError.h  __BkGraphicsAPI.h  __BkLogger.h
includes/pil/: BkAtomicDataType.h  BkFileSystem.h  BkGraphicWrapper.h  BkGraphicsAPI.h  BkOpenGL.h  BkPlatformIndependanceLayer.h  BkRenderer.h  BkVulkan.h  __BkExport.h  __BkGraphicsAPI.h  __BkOpenGL.h  adt.h  pil.h
includes/pil/file_system/: file.h
includes/pil/fs/: file.h
includes/pil/gw/: gw.h  vulkan.h
includes/renderer/hardware/: __BkOpenGL.h  __BkOpenGLBuffer.h  __BkOpenGLShader.h
samples/: CMakeLists.txt
samples/car/: CMakeLists.txt
samples/car/sources/: main.c  main.cpp
shaders/: pixel.glsl  vertex.glsl
sources/: blackhart.c  main.c
sources/core/: BkArray.c  BkBuffer.c  BkCamera.c  BkError.c  BkList.c  BkLogger.c  BkLogger.c~RF599ff55.TMP  BkMaterial.c  BkMath.c  BkMatrix4x4.c  BkPoint.c  BkRenderer.c  BkScene.c  BkShader.c  BkString.c  BkVector.c  BkVector4.c
sources/core/debug/: BkLogger.c  logger.c
sources/core/graphics/: BkShader.c
sources/core/math/: BkMatrix4x4.c  BkVector4.c  matrix4x4.c  vector4.c
sources/core/string/: BkString.c
sources/foundation/: BkAngleAxis.c  BkArray.c  BkCamera.c  BkError.c  BkEulerAngles.c  BkFileSystem.c  BkGraphicsAPI.c  BkList.c  BkLogger.c  BkMath.c  BkMatrix4x4.c  BkMeshSampling.c  BkPoint3.c  BkProjection.c  BkQuaternion.c  BkQueue.c  BkRenderer.c  BkString.c  BkTransform.c  BkVector3.c
sources/pil/: BkFileSystem.c  BkGraphicsAPI.c  BkGraphicsWrapper.c  BkOpenGL.c  BkVulkan.c  BkVulkan.cc
sources/pil/file_system/: file.c
sources/pil/fs/: file.c
sources/pil/graphic_wrapper/: vulkan.c
sources/pil/gw/: vulkan.c
sources/renderer/hardware/: BkOpenGL.c  BkOpenGLBuffer.c  BkOpenGLShader.c
tests/: CMakeLists.txt
tests/includes/foundation/: BkEulerAngles_test.h  BkMath_test.h  BkMatrix4x4_test.h  BkQuaternion_test.h  BkVector3_test.h
tests/sources/: main.c  main.cpp
tests/sources/core/: BkArray.cpp  BkCamera.cpp  BkList.cpp  BkMatrix4x4.cpp  BkPoint.cpp  BkQueue.cpp  BkTransform.cpp  BkVector.cpp  BkVector3.cpp  BkVector4.cpp
tests/sources/foundation/: BkArray_test.c  BkEulerAngles_test.c  BkMath_test.c  BkMatrix4x4_test.c  BkQuaternion_test.c  BkQueue_test.c  BkVector3_test.c
